--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Batman Quiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-<div class="grid">
-    <div id="quiz" class="centered grid__col--8">
+<div class="container">
+    <header>
         <h1>Batman Quiz</h1>
-
-        <h2 id="question" class="headline-secondary--grouped"></h2>
-
-        <p id="choice0"></p>
-        <button id="guess0" class="btn--default">Select Answer</button>
-
-        <p id="choice1"></p>
-        <button id="guess1" class="btn--default">Select Answer</button>
-
-      <p id="choice2"></p>
-        <button id="guess2" class="btn--default">Select Answer</button>
-      
-      <p id="choice3"></p>
-        <button id="guess3" class="btn--default">Select Answer</button>
-      
-        <footer>
-            <p id="progress">Question x of y</p>
-        </footer>
+    </header>
+    <div class="bodyWrapper">
+        <div id="quiz" class="mainContentWrapper">
+            <div class="mainContent">
+                <h2 id="question" class="headline-secondary--grouped"></h2>
+                <ul>
+                    <li><button id="choice0" class="btn-default"></button></li>
+                    <li><button id="choice1" class="btn-default"></button></li>
+                    <li><button id="choice2" class="btn-default"></button></li>
+                    <li><button id="choice3" class="btn-default"></button></li>
+                </ul>
+            </div>
+        </div>
     </div>
+    <footer>
+        <p id="progress">Question x of y</p>
+    </footer>
+
 </div>
 
-<script src="quiz.js"></script>
-<script src="question.js"></script>
-<script src="quiz_ui.js"></script>
-<script src="app.js"></script>
+<script src="js/objects/quiz.js"></script>
+<script src="js/objects/question.js"></script>
+<script src="js/quiz_ui.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
